--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "react-typescript",
+  "name": "template",
   "version": "1.0.0",
-  "description": "React and TypeScript example starter project",
+  "description": "React, TypeScript, ReactRouter, MUI, SASS template",
   "keywords": [
     "typescript",
     "react",
-    "starter"
+    "router",
+    "materialui",
+    "sass"
   ],
   "main": "src/index.tsx",
   "dependencies": {
@@ -20,7 +22,9 @@
   },
   "devDependencies": {
     "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.3",
+    "sass": "1.54.4",
     "typescript": "4.4.2"
   },
   "scripts": {
